CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(DiaoBotDaemon)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "-Wall")
SET(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} "-static")
IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
    SET(CMAKE_CXX_FLAGS ${APP_SOURCES} "-DDEBUG")
ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)

# LibDiaoBot
INCLUDE_DIRECTORIES(../SDK/include)
LINK_LIBRARIES(${CMAKE_SOURCE_DIR}/../SDK/build/libdiaobot.a)

LINK_LIBRARIES(pthread dl)

FILE(GLOB APP_SOURCES "./*.cpp")

ADD_EXECUTABLE(diaobot.out ${APP_SOURCES})