CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(DiaoBotDaemon)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "-Wall -pthread")
# IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
#     SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " -DDEBUG")
# ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)

# LibDiaoBot
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/../SDK/build)
INCLUDE_DIRECTORIES(../SDK/include)

LINK_LIBRARIES(diaobot dl crypto)

FILE(GLOB APP_SOURCES "./*.cpp")
SET(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-DMG_ENABLE_THREADS=1")
SET(APP_SOURCES ${APP_SOURCES} "../ThirdParty/mongoose/mongoose.c")
SET(APP_SOURCES ${APP_SOURCES} "../ThirdParty/URLDecode/urldecode.c")
SET(APP_SOURCES ${APP_SOURCES} "../ThirdParty/WXBizMsgCrypt/WXBizMsgCrypt.cpp")

ADD_EXECUTABLE(diaobotd ${APP_SOURCES})
