CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(DiaoBotSDK)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "-Wall -fPIC")
IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
    SET(CMAKE_CXX_FLAGS ${APP_SOURCES} "-DDEBUG")
ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)

INCLUDE_DIRECTORIES(./include)

LINK_LIBRARIES(pthread dl z curl)

FILE(GLOB APP_SOURCES "./*.cpp")
FILE(GLOB APP_SOURCES ${APP_SOURCES} "../ThirdParty/md5/src/md5.cpp")
FILE(GLOB APP_SOURCES ${APP_SOURCES} "../ThirdParty/cpp-base64/base64.cpp")

ADD_LIBRARY(diaobot SHARED ${APP_SOURCES})