CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(DiaoBotJobSample)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "-Wall")
IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
    SET(CMAKE_CXX_FLAGS ${APP_SOURCES} "-DDEBUG")
ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)

# LibDiaoBot
# LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/../SDK/build)
# INCLUDE_DIRECTORIES(../SDK/include)

LINK_LIBRARIES(diaobot)

FILE(GLOB APP_SOURCES "./*.cpp")

ADD_LIBRARY(sample SHARED ${APP_SOURCES})